--- a/Blanko/app/src/main/AndroidManifest.xml
+++ b/Blanko/app/src/main/AndroidManifest.xml
@@ -31,8 +31,9 @@
 
         </activity>
         <activity
-            android:name="com.blankoinc.blanko.LoginActivity"
+            android:name=".RegisterActivity"
             android:label="@string/title_activity_login"
+            android:parentActivityName=".WelcomeActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
     </application>
