--- a/Blanko/app/src/main/AndroidManifest.xml
+++ b/Blanko/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.blankoinc.blanko" >
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +12,6 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="landscape">
-
         </activity>
         <activity
             android:name="com.blankoinc.blanko.SplashActivity"
@@ -30,7 +29,6 @@
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait"
             android:parentActivityName=".SplashActivity">
-
         </activity>
         <activity
             android:name=".RegisterActivity"
@@ -40,5 +38,4 @@
             android:screenOrientation="portrait">
         </activity>
     </application>
-
 </manifest>
